--- a/warlock.html
+++ b/warlock.html
@@ -226,7 +226,7 @@
                         <div class="form-group">
                             <div class="input-group">
                                 <img src="/static/images/icons/552.webp" class="img-fluid" alt="icon">
-                                <input type="number" class="form-control" id="targetResilience">
+                                <input type="number" class="form-control" id="targetResilience" step="any">
                             </div>
                         </div>
                         <div class="form-group">
